--- a/platform/board/xr808/Config.in
+++ b/platform/board/xr808/Config.in
@@ -1,13 +1,15 @@
 config AOS_BOARD_XR808
     bool "XR808"
-    select AOS_MCU_XR872
-    select AOS_COMP_KERNEL_INIT
-    select AOS_COMP_NETMGR
-    select AOS_COMP_NEWLIB_STUB
-    select AOS_COMP_LWIP
-    select AOS_COMP_YLOOP
-    select AOS_COMP_CLI
-    select AOS_COMP_FATFS
+    select AOS_MCU_XR872 if !AOS_CREATE_PROJECT
+    select AOS_COMP_KERNEL_INIT if !AOS_CREATE_PROJECT
+    select AOS_COMP_NETMGR if !AOS_CREATE_PROJECT
+    select AOS_COMP_NEWLIB_STUB if !AOS_CREATE_PROJECT
+
+    select AOS_COMP_YLOOP if !AOS_CREATE_PROJECT
+    select AOS_COMP_CLI if !AOS_CREATE_PROJECT
+    select AOS_COMP_FATFS if !AOS_CREATE_PROJECT
+    select CONFIG_AOS_TCPIP
+
     help
 
 if AOS_BOARD_XR808
